--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<script type="text/javascript" src="static/js/control/rotationselect.js"></script>
 		<script type="text/javascript" src="static/js/mapcrafterui.js"></script>
 
-		<!-- Last update 18.03.2015, 18:15:24 -->
+		<!-- Last update 18.03.2015, 19:30:07 -->
 		<script type="text/javascript">
 		var CONFIG = {
 "map_piworld" : {
@@ -39,6 +39,8 @@
 	imageFormat: "png",
 	rotations: [0,],
 	tileOffsets: [[0, 0], [0, 0], [0, 0], [0, 0], ],
+	defaultView: [-240,440,64],
+	defaultZoom: 6,
 },
 		};
 		</script>
